# project-k-shaman

./: .dockerignore  .gitignore  .mc-vibe-dirty-probe  Dockerfile  Plan.md  README.md  compose.yaml  pyproject.toml  requirements.in  requirements.txt  today-shindang-service-plan-v2.md  today-shindang-service-plan-v3.md  경쟁분석-보고서-2026-06-13.md  문서-분석-리포트-2026-05-29.md  임원용-1페이지-요약-2026-06-13.md
backend/: app.py  core.py  dream.py  dream_card.py  ratelimit.py  requirements.txt
deploy/: Caddyfile  compose.aws.yaml  remote_deploy.sh  remote_rollback.sh
docs/: architecture-and-execution-guide.html  master-spec.md  master-spec.v1.md  master-spec.v2.md  project-structure.md  runbook.md
fortune-engine/: cache_layer.py  character-sheet-hongyeon.md  fortune-measurement-report.md  fortune-prompt-hongyeon.v1.1.md  fortune-samples.v1.1.json  fortune-samples.v1.json  fortune-schema.v1.1.json  fortune-schema.v1.json  fortune_api_mock.py  seed_builder.py  share_card.py  token-optimization-report.md  tts_adapter.py  validate_fortune.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infra/: README.md
mission-control/: approval.mjs  approval.test.mjs  autonomy.mjs  board.mjs  device-posture.mjs  inbox.mjs  library.mjs  read-primitives.mjs  server.mjs  token-store.mjs  trace.mjs  ui.mjs
reference/: README.md
scripts/: ai_draft.sh  approve.sh  auto_merge.sh  autopilot_grant.sh  backfill_completed_at.sh  check_deployment_contract.sh  check_scope_omission.sh  check_ui_requirements.sh  db_migrate.sh  doc_edit.sh  init_new_project.sh  pair.sh  (+23 more)
(+334 files in other folders)
